@@ -11,6 +11,7 @@
 
 #include "time.h"
 #include "tchar.h"
+#include "math.h"
 
 PyObject *PyWin_NewTime(PyObject *timeOb);
 
@@ -566,6 +567,10 @@ PyObject *PyTime::getattro(PyObject *self, PyObject *obname)
 		PyWin_SetAPIError("VariantTimeToSystemTime");
 		return NULL;
 	}
+
+	double intpart;
+	st.wMilliseconds = modf(This->m_time * SECS_PER_DAY, &intpart) * 1000000;
+
 	char *name=PYWIN_ATTR_CONVERT(obname);
 	if (name==NULL)
 		return NULL;
